<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dip"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        >
        <TextView  
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/login_svcurl_tv"
            />
        <TextView  
            android:id="@+id/login_svcurl_tv"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            />
    </LinearLayout>
	<LinearLayout
        android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
        android:layout_weight="1" 
        android:gravity="center_vertical"
	    >
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            >
            <TextView  
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:text="@string/login_user_tv"
                />
            <Spinner
                android:id="@+id/login_user_sp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
                android:prompt="@string/login_user_prompt"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            >
		    <TextView  
		        android:layout_width="wrap_content" 
		        android:layout_height="wrap_content" 
		        android:text="@string/login_password_tv"
		        />
		    <EditText
		        android:id="@+id/login_password_et"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
                android:password="true"
		        />
        </LinearLayout>
	    <CheckBox
            android:id="@+id/login_rememberme_cb"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/login_rememberme_cb"
	        />
        <TextView  
            android:id="@+id/login_info_tv"
            android:layout_marginTop="10dip"
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:gravity="center_horizontal"
            android:text="@string/login_login_progress"
            />
	</LinearLayout>
	<LinearLayout
        android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
	    >
	 <Button  
	     android:id="@+id/login_login_btn"
	     android:layout_width="wrap_content" 
	     android:layout_height="wrap_content" 
	     android:layout_weight="1" 
	     android:text="@string/login_login_btn"
	     />
	 <Button  
	     android:id="@+id/login_setting_btn"
	     android:layout_width="wrap_content" 
	     android:layout_height="wrap_content" 
	     android:layout_weight="1" 
	     android:text="@string/login_setting_btn"
	     />
	</LinearLayout>
</LinearLayout>
