<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dip"
    >
    <TextView android:id="@+id/tally_info_tv" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        />
    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" 
        >
	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    >
		<LinearLayout
            android:orientation="horizontal"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:padding="5dip"
		    >
			<TextView  
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" 
			    android:text="@string/tally_amount_tv"
			    />
			<EditText
			    android:id="@+id/tally_amount_et"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
                android:layout_weight="1" 
                android:numeric="integer|decimal"
                android:hint="@string/tally_amount_hint"
			    />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            >
		    <TextView  
		        android:layout_width="wrap_content" 
		        android:layout_height="fill_parent" 
                android:gravity="center_vertical"
		        android:text="@string/tally_type_tv"
		        />
	        <LinearLayout
                android:orientation="vertical"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            >
				<RadioGroup
                    android:id="@+id/tally_type_rg"
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    >
				    <RadioButton
				        android:id="@+id/tally_t0_rb"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/tally_t0_rb"
				        />
				    <RadioButton
				        android:id="@+id/tally_t1_rb"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:text="@string/tally_t1_rb"
				        />
                </RadioGroup>
                <Spinner
                    android:id="@+id/tally_t0subtype_sp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    />
                <Spinner
                    android:id="@+id/tally_t1subtype_sp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    />
	        </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            >
            <TextView  
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:text="@string/tally_date_tv"
                />
            <EditText
                android:id="@+id/tally_date_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" 
                android:editable="false"
                />
        </LinearLayout>
		<LinearLayout
            android:orientation="horizontal"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:padding="5dip"
		    >
		    <TextView  
		        android:layout_width="wrap_content" 
		        android:layout_height="wrap_content" 
		        android:text="@string/tally_user_tv"
		        />
		    <Spinner
		        android:id="@+id/tally_user_sp"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        />
		</LinearLayout>
		<LinearLayout
            android:orientation="horizontal"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:padding="5dip"
		    >
		    <TextView  
		        android:layout_width="wrap_content" 
		        android:layout_height="wrap_content" 
		        android:text="@string/tally_memo_tv"
		        />
		    <EditText
		        android:id="@+id/tally_memo_et"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        />
		</LinearLayout>
	</LinearLayout>
    </ScrollView>
	<LinearLayout
        android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
	    >
	    <Button  
	        android:id="@+id/tally_save_btn"
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content" 
	        android:layout_weight="1" 
	        android:text="@string/tally_save_btn"
	        />
	    <Button  
	        android:id="@+id/tally_delete_btn"
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content" 
	        android:layout_weight="1" 
	        android:text="@string/tally_delete_btn"
	        />
	</LinearLayout>
</LinearLayout>
